--- a/.github/workflows/buildci-docker.yml
+++ b/.github/workflows/buildci-docker.yml
@@ -81,22 +81,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       #-----------------------------------NODEJS14---------------------------------------# 
-      -
-        name: Build and push (NodeJS 14)
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./nodejs/node14.Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: sahrul012/pterodactyl-images:nodejs_14
-      -
-        name: Push Image to multiple registries (NodeJS 14)
-        uses: akhilerm/tag-push-action@v2.0.0
-        with:
-          src: docker.io/sahrul012/pterodactyl-images:nodejs_14
-          dst: |
-            ghcr.io/sahrulgamerz/pterodactyl-images:nodejs_14
+      # -
+      #   name: Build and push (NodeJS 14)
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     context: .
+      #     file: ./nodejs/node14.Dockerfile
+      #     platforms: linux/amd64,linux/arm64
+      #     push: true
+      #     tags: sahrul012/pterodactyl-images:nodejs_14
+      # -
+      #   name: Push Image to multiple registries (NodeJS 14)
+      #   uses: akhilerm/tag-push-action@v2.0.0
+      #   with:
+      #     src: docker.io/sahrul012/pterodactyl-images:nodejs_14
+      #     dst: |
+      #       ghcr.io/sahrulgamerz/pterodactyl-images:nodejs_14
       #-----------------------------------NODEJS16---------------------------------------# 
       -
         name: Build and push (NodeJS 16)
